crates/zenith/tests/snapshots/screens__apis_catalogue__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
 5 APIs · manifest 2.0.0    │ solar.ping 1.0.0 · experimental · since 0.1.0
   solar.describe   1.0.0   │ Answers immediately, to prove SOLAR is there
   solar.manifest   1.1.0   │ side effects none · idempotent · budget 1000 ms
 › solar.ping       1.0.0   │
   solar.version    1.0.0   │ parameters
   system.info      1.1.0   │   message  string or null  optional
                            │            Anything the caller wants back, to
                            │            tell one ping from another.
                            │ errors
                            │   none beyond those of dispatch
                            │ examples
                            │   1 bare            {}
                            │                     A ping with no message at
                            │                     all · compared by exact
                            │                     matches the example · 0.48
                            │                     ms
                            │   2 with_a_message  {"message":"hi"}
                            │                     A ping that carries
                            │                     something to echo · compared
                            │                     by exact
                            │                     differs at /echo: expected
 1 to 9 run an example   a all   Enter form   e edit   f filter   R reload
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.47 ms ─── in orbit 42s ───────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #555355 on #F5F1E8
 0: 21-26  #8C4907 on #F5F1E8 bold underlined
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 1:  0-23  #555355 on #F5F1E8
 1: 28-28  #868482 on #F5F1E8
 1: 30-39  #8C4907 on #F5F1E8 bold
 1: 46-74  #555355 on #F5F1E8
 2:  0-2   #8C4907 on #F5F1E8
 2: 19-27  #555355 on #F5F1E8
 2: 28-28  #868482 on #F5F1E8
 3:  0-2   #8C4907 on #F5F1E8
 3: 19-27  #555355 on #F5F1E8
 3: 28-28  #868482 on #F5F1E8
 3: 30-42  #555355 on #F5F1E8
 3: 47-76  #555355 on #F5F1E8
 4:  0-2   #8C4907 on #F5F1E8
 4:  3-18  #8C4907 on #F5F1E8 bold
 4: 19-27  #555355 on #F5F1E8
 4: 28-28  #868482 on #F5F1E8
 5:  0-2   #8C4907 on #F5F1E8
 5: 19-27  #555355 on #F5F1E8
 5: 28-28  #868482 on #F5F1E8
 5: 30-39  #8C4907 on #F5F1E8 bold
 6:  0-2   #8C4907 on #F5F1E8
 6: 19-27  #555355 on #F5F1E8
 6: 28-28  #868482 on #F5F1E8
 6: 32-38  #8C4907 on #F5F1E8
 6: 55-64  #555355 on #F5F1E8
 7: 28-28  #868482 on #F5F1E8
 7: 41-74  #555355 on #F5F1E8
 8: 28-28  #868482 on #F5F1E8
 8: 41-67  #555355 on #F5F1E8
 9: 28-28  #868482 on #F5F1E8
 9: 30-35  #8C4907 on #F5F1E8 bold
10: 28-28  #868482 on #F5F1E8
10: 29-60  #555355 on #F5F1E8
11: 28-28  #868482 on #F5F1E8
11: 30-37  #8C4907 on #F5F1E8 bold
12: 28-28  #868482 on #F5F1E8
12: 32-32  #8C4907 on #F5F1E8 bold
12: 34-47  #8C4907 on #F5F1E8
13: 28-28  #868482 on #F5F1E8
13: 50-74  #555355 on #F5F1E8
14: 28-28  #868482 on #F5F1E8
14: 50-72  #555355 on #F5F1E8
15: 28-28  #868482 on #F5F1E8
15: 50-75  #8C4907 on #F5F1E8
16: 28-28  #868482 on #F5F1E8
16: 50-51  #8C4907 on #F5F1E8
17: 28-28  #868482 on #F5F1E8
17: 32-32  #8C4907 on #F5F1E8 bold
17: 34-47  #8C4907 on #F5F1E8
18: 28-28  #868482 on #F5F1E8
18: 50-68  #555355 on #F5F1E8
19: 28-28  #868482 on #F5F1E8
19: 50-77  #555355 on #F5F1E8
20: 28-28  #868482 on #F5F1E8
20: 50-57  #555355 on #F5F1E8
21: 28-28  #868482 on #F5F1E8
21: 50-75  #8C4907 on #F5F1E8 bold
22:  1-6   #8C4907 on #F5F1E8 bold
22:  7-24  #555355 on #F5F1E8
22: 25-25  #8C4907 on #F5F1E8 bold
22: 26-32  #555355 on #F5F1E8
22: 33-37  #8C4907 on #F5F1E8 bold
22: 38-45  #555355 on #F5F1E8
22: 46-46  #8C4907 on #F5F1E8 bold
22: 47-54  #555355 on #F5F1E8
22: 55-55  #8C4907 on #F5F1E8 bold
22: 56-65  #555355 on #F5F1E8
22: 66-66  #8C4907 on #F5F1E8 bold
22: 67-76  #555355 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 67-79  #868482 on #F5F1E8
