crates/zenith/tests/snapshots/screens__apis_catalogue__80x24__no_colour_ascii.snap
---
source: crates/zenith/tests/screens.rs
expression: screen(&buffer)
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                .     .     ? keys
 5 APIs - manifest 2.0.0    | solar.ping 1.0.0 - experimental - since 0.1.0
   solar.describe   1.0.0   | Answers immediately, to prove SOLAR is there
   solar.manifest   1.1.0   | side effects none - idempotent - budget 1000 ms
 > solar.ping       1.0.0   |
   solar.version    1.0.0   | parameters
   system.info      1.1.0   |   message  string or null  optional
                            |            Anything the caller wants back, to
                            |            tell one ping from another.
                            | errors
                            |   none beyond those of dispatch
                            | examples
                            |   1 bare            {}
                            |                     A ping with no message at
                            |                     all - compared by exact
                            |                     matches the example - 0.48
                            |                     ms
                            |   2 with_a_message  {"message":"hi"}
                            |                     A ping that carries
                            |                     something to echo - compared
                            |                     by exact
                            |                     differs at /echo: expected
 1 to 9 run an example   a all   Enter form   e edit   f filter   R reload
 --*-- SOLAR 0.1.0 - solar/1 --- last call 0.47 ms --- in orbit 42s -----------
--- every cell not listed is - on -
 0:  0-7   - on - bold
 0: 21-26  - on - bold underlined
 0: 45-72  - on - dim
 0: 73-73  - on - bold
 1: 28-28  - on - dim
 1: 30-39  - on - bold
 2:  0-2   - on - bold
 2: 28-28  - on - dim
 3:  0-2   - on - bold
 3: 28-28  - on - dim
 4:  0-18  - on - bold reversed
 4: 19-27  - on - reversed
 4: 28-28  - on - dim
 5:  0-2   - on - bold
 5: 28-28  - on - dim
 5: 30-39  - on - bold
 6:  0-2   - on - bold
 6: 28-28  - on - dim
 6: 32-38  - on - bold
 7: 28-28  - on - dim
 8: 28-28  - on - dim
 9: 28-28  - on - dim
 9: 30-35  - on - bold
10: 28-28  - on - dim
11: 28-28  - on - dim
11: 30-37  - on - bold
12: 28-28  - on - dim
12: 32-32  - on - bold
12: 34-47  - on - bold
13: 28-28  - on - dim
14: 28-28  - on - dim
15: 28-28  - on - dim
15: 50-75  - on - bold
16: 28-28  - on - dim
16: 50-51  - on - bold
17: 28-28  - on - dim
17: 32-32  - on - bold
17: 34-47  - on - bold
18: 28-28  - on - dim
19: 28-28  - on - dim
20: 28-28  - on - dim
21: 28-28  - on - dim
21: 50-75  - on - bold
22:  1-6   - on - bold
22: 25-25  - on - bold
22: 33-37  - on - bold
22: 46-46  - on - bold
22: 55-55  - on - bold
22: 66-66  - on - bold
23:  0-2   - on - dim
23:  3-3   - on - bold
23:  4-6   - on - dim
23:  7-17  - on - bold
23: 28-32  - on - dim
23: 50-54  - on - dim
23: 67-79  - on - dim
